@@ -1,5 +1,17 @@
 2007-01-08  Thomas Wood  <thos@gnome.org>
 
+	Patch by: Alberto Ruiz <aruiz@synaptia.net>
+
+	* Makefile.am:
+	* gnome-theme-installer.desktop.in.in:
+	* gnome-theme-package.xml:
+	* gnome-theme-package.xml.in:
+
+	Add support for opening .gtp (application/x-gnome-theme-package) files.
+	Fixes bug 393697 (Theme packages should have their own mime type.)
+
+2007-01-08  Thomas Wood  <thos@gnome.org>
+
 	* gtkrc-utils.h: Correct function decleration
 	* gnome-theme-details.c: (update_color_scheme_tab), (color_select),
 	(toggle_color_scheme_key):
