@@ -1,3 +1,12 @@
+2007-01-08  Thomas Wood  <thos@gnome.org>
+
+	Patch by: Alberto Ruiz <aruiz@synaptia.net>
+
+	* POTFILES.in:
+
+	Add support for opening .gtp (application/x-gnome-theme-package) files.
+	Fixes bug 393697 (Theme packages should have their own mime type.)
+
 2007-01-08  Jakub Friedl <jfriedl@suse.cz>
 
 	* cs.po: Updated Czech translation
