@@ -1,3 +1,12 @@
+2007-01-08  Thomas Wood  <thos@gnome.org>
+
+	Patch by: Alberto Ruiz <aruiz@synaptia.net>
+
+	* configure.in:
+
+	Add support for opening .gtp (application/x-gnome-theme-package) files.
+	Fixes bug 393697 (Theme packages should have their own mime type.)
+
 2007-01-06  Marc-Andre Lureau  <marcandre.lureau@gmail.com>
 
 	Fixes #392276
